Connecting info from Django server to Angular frontend via get request service

--- a/mobileBackend/mobileFrontend/src/app/app.component.html
+++ b/mobileBackend/mobileFrontend/src/app/app.component.html
@@ -6,6 +6,7 @@
 
 <section class="container">
   <div class="row">
+    <!-- <mat-card class="col-md-6" *ngFor="let project of projects">{{ project }}</mat-card>-->
     <mat-card class="col-md-6">1</mat-card> <!-- we use mat-card instead of div -->
     <mat-card class="col-md-6">2</mat-card>
     <mat-card class="col-md-6 d-block d-lg-none">3</mat-card> <!-- will be hidden on large screens -->
