--- a/mobileBackend/mobileFrontend/src/app/app.component.html
+++ b/mobileBackend/mobileFrontend/src/app/app.component.html
@@ -1,23 +1,27 @@
+<!--
 <header>
   <mat-toolbar color="primary">Angular 6 Bootstrap 4 Example</mat-toolbar>
 </header>
 
-<!-- <app-header></app-header> -->
-
 <section class="container">
   <div class="row">
-    <!-- <mat-card class="col-md-6" *ngFor="let project of projects">{{ project }}</mat-card>-->
-    <mat-card class="col-md-6">1</mat-card> <!-- we use mat-card instead of div -->
-    <mat-card class="col-md-6">2</mat-card>
-    <mat-card class="col-md-6 d-block d-lg-none">3</mat-card> <!-- will be hidden on large screens -->
-    <mat-card class="col-md-6 d-block d-lg-none">4</mat-card>
+    <mat-card class="col-md-6" *ngFor="let project of projects">
+      <ul>
+        <li>
+          {{ project.project_name }}
+        </li>
+        <li>
+          {{ project.project_company }}
+        </li>
+        <li>
+          {{ project.project_description }}
+        </li>
+      </ul>
+    </mat-card>
   </div>
 </section>
 
-<!-- routes will be rendered here 
-<router-outlet></router-outlet>-->
 
- <!-- <app-footer></app-footer> -->
  <footer>
   <div class="container">
     <div class="content has-text-centered">
@@ -27,3 +31,9 @@
     </div>
     </div>
  </footer>
+-->
+
+<abe-header></abe-header>
+<!-- routes will be rendered here -->
+<router-outlet></router-outlet>
+<abe-footer></abe-footer> 
