Added sidenav functionality, added PDF reader

--- a/mobileBackend/mobileFrontend/src/app/core/header/header.component.html
+++ b/mobileBackend/mobileFrontend/src/app/core/header/header.component.html
@@ -1,1 +1,21 @@
-<mat-toolbar color="primary">Angular 6 Bootstrap 4 Example</mat-toolbar>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" color="warn">
+            <mat-icon aria-label="Side nav toggle icon">=</mat-icon>
+        </button>
+        <span>Quantum Knots</span>
+    </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container class="example-container">
+    <mat-sidenav #drawer mode="side" opened role="navigation">
+        <mat-nav-list>
+            <a mat-list-item routerLink='/home'>Home</a>
+            <a mat-list-item routerLink='/projects'>Projects</a>
+            <a mat-list-item routerLink='/about'>About Me</a>
+            <a mat-list-item routerLink='/resume'>Resume</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
