Added sidenav toggle, fixed sidenav height issue, fixed CORS issue in Django, Centered footer text

--- a/mobileBackend/mobileFrontend/src/app/core/footer/footer.component.html
+++ b/mobileBackend/mobileFrontend/src/app/core/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
-  <div class="content has-text-centered">
-    <p>
+  <div class="center-div">
+    <p align="center">
       Ajay Rohatgi 2018
     </p>
   </div>
