--- a/mobileBackend/mobileFrontend/src/app/projectspage/projectspage.component.html
+++ b/mobileBackend/mobileFrontend/src/app/projectspage/projectspage.component.html
@@ -1,6 +1,6 @@
 <section class="container">
     <div class="row">
-      <mat-card class="col-md-6" *ngFor="let project of projects">
+      <mat-card class="col-md-6" *ngFor="let project of projects" style="margin:0em;">
         <ul>
           <li>
             {{ project.project_name }}
