updates for base ui

--- a/frontend/my-app/src/app/aboutpage/aboutpage.component.html
+++ b/frontend/my-app/src/app/aboutpage/aboutpage.component.html
@@ -2,7 +2,6 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
-<main class="content">
-    <qk-header class="header"></qk-header>
-    <qk-footer></qk-footer>
-</main>
+<p>
+    This is my homepage
+</p>
