--- a/frontend/my-app/src/theme.scss
+++ b/frontend/my-app/src/theme.scss
@@ -2,8 +2,8 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$my-app-primary: mat-palette();
-$my-app-accent: mat-palette();
+$my-app-primary: mat-palette($mat-deep-orange);
+$my-app-accent: mat-palette($mat-deep-orange);
 $my-app-warn: mat-palette($mat-deep-orange);
 $my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
